--- a/src/app/components/map-object/map-object.component.html
+++ b/src/app/components/map-object/map-object.component.html
@@ -1,1 +1,4 @@
-<p>map-object works!</p>
+<ng-content></ng-content>
+<diV class="handle se" (mousedown)="initDrag($event, 'SE')"></diV>
+<diV class="handle s" (mousedown)="initDrag($event, 'S')"></diV>
+<diV class="handle e" (mousedown)="initDrag($event, 'E')"></diV>
