--- a/src/app/components/editor-playground/editor-playground.component.scss
+++ b/src/app/components/editor-playground/editor-playground.component.scss
@@ -4,8 +4,9 @@
 
 .ls-visor {
   background-color: #fff;
-  width: 1000px;
-  height: 768px;
+  width: 100%;
+  height: 100%;
+  max-height: 768px;
   position: relative;
 }
 
