--- a/src/app/components/editor-playground/editor-playground.component.scss
+++ b/src/app/components/editor-playground/editor-playground.component.scss
@@ -5,16 +5,15 @@
 .ls-visor {
   background-color: #fff;
   width: 100%;
-  height: 100%;
-  max-height: 768px;
+  // height: 100%;
+  max-height: 1000px;
+  // max-width: 1000px;
   position: relative;
 }
 
-.ls-map {
+.canvas {
   background-color: rgb(68, 140, 198);
   position: relative;
-  height: 2000px;
-  width: 2000px;
 
   &:active {
     cursor: grabbing;
@@ -23,11 +22,4 @@
   .ls-map-object {
     position: absolute;
   }
-
-  // &:active {
-  //   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-  //             0 8px 10px 1px rgba(0, 0, 0, 0.14),
-  //             0 3px 14px 2px rgba(0, 0, 0, 0.12);
-
-  // }
 }
