--- a/src/app/pages/visual-editor/visual-editor.page.html
+++ b/src/app/pages/visual-editor/visual-editor.page.html
@@ -1,3 +1,3 @@
 <div class="map-container">
-  <aor-editor-playground> </aor-editor-playground>
+  <aor-editor-playground [canvasOptions]="canvasOptions" [visorOptions]="visorOptions"> </aor-editor-playground>
 </div>
