--- a/src/app/pages/visual-editor/visual-editor.page.scss
+++ b/src/app/pages/visual-editor/visual-editor.page.scss
@@ -1,7 +1,8 @@
 .map-container {
+  display: flex;
+  justify-content: center;
   width: 100%;
-  height: 768px;
-  // overflow: hidden;
+  height: 1000px;
   padding: 20px;
   box-sizing: border-box;
 }
