--- a/src/app/pages/visual-editor/visual-editor.page.scss
+++ b/src/app/pages/visual-editor/visual-editor.page.scss
@@ -1,3 +1,9 @@
+.canvas-form {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
 .map-container {
   display: flex;
   justify-content: center;
