--- a/src/app/components/map-object/map-object.component.scss
+++ b/src/app/components/map-object/map-object.component.scss
@@ -4,33 +4,39 @@
   align-items: center;
   box-sizing: border-box;
   padding: 2px;
+  position: absolute;
+  cursor: grab;
 
   .handle {
     display: none;
     background-color: black;
     position: absolute;
-    width: 10%;
-    height: 10%;
+    width: 10px;
+    height: 10px;
 
     &.se {
       bottom: 0;
-      clip-path: polygon(0% 100%, 100% 100%, 100% 0%);
+      clip-path: circle(45%);
       cursor: se-resize;
       right: 0;
+      margin-bottom: -5.5px;
+      margin-right: -5.5px;
     }
 
     &.s {
       bottom: 0;
-      clip-path: polygon(0% 0%, 100% 0%, 50% 100%);
+      clip-path: circle(45%);
       cursor: s-resize;
       right: 50%;
+      margin-bottom: -5.5px;
     }
 
     &.e {
       bottom: 50%;
       cursor: e-resize;
-      clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+      clip-path: circle(45%);
       right: 0;
+      margin-right: -5.5px;
     }
   }
 
