--- a/src/app/components/element-container/element-container.component.html
+++ b/src/app/components/element-container/element-container.component.html
@@ -2,3 +2,4 @@
 <div class="handle se" aorResizeHandle resizeAction="SE"></div>
 <div class="handle s" aorResizeHandle resizeAction="S"></div>
 <div class="handle e" aorResizeHandle resizeAction="E"></div>
+<span>{{ cdFired() }}</span>
